fixed spacings

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,5 +1,5 @@
 wutu-data-table {
-  --wdt-td-padding: 1rem 0.8rem 1rem 0;
+  --wdt-td-padding: 0.6rem 0.8rem 0.6rem 1rem;
 }
 body {
   background: lightgrey;
